--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,17 @@
             <artifactId>selenium-chrome-driver</artifactId>
             <version>3.9.1</version>
         </dependency>
-
+        <!-- Prometheus Monitoring -->
+        <dependency>
+            <groupId>io.prometheus</groupId>
+            <artifactId>simpleclient</artifactId>
+            <version>0.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.prometheus</groupId>
+            <artifactId>simpleclient_spring_boot</artifactId>
+            <version>0.3.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
