--- a/selenium-liveness.yaml
+++ b/selenium-liveness.yaml
@@ -90,7 +90,8 @@ items:
           ports:
           - containerPort: 8080
           resources: {}
-          args: ["--spring.profiles.active=openshift"]
+          command: ["java"]
+          args: ["-Dspring.profiles.active=openshift", "-jar", "/app/app.war"]
         restartPolicy: Always
     test: false
     triggers:
