--- a/selenium-liveness.yaml
+++ b/selenium-liveness.yaml
@@ -71,6 +71,7 @@ items:
     creationTimestamp: null
     labels:
       io.kompose.service: app
+      app: Selenium-Liveness
     name: app
   spec:
     replicas: 1
@@ -170,6 +171,7 @@ items:
     creationTimestamp: null
     labels:
       io.kompose.service: firefox
+      app: Selenium-Liveness
     name: firefox
   spec:
     replicas: 1
@@ -278,6 +280,7 @@ items:
     creationTimestamp: null
     labels:
       io.kompose.service: selenium-hub
+      app: Selenium-Liveness
     name: selenium-hub
   spec:
     replicas: 1
