--- a/selenium-liveness.yaml
+++ b/selenium-liveness.yaml
@@ -285,6 +285,115 @@ items:
       kompose.version: 1.9.0 ()
     creationTimestamp: null
     labels:
+      io.kompose.service: chrome
+      app: Selenium-Liveness
+    name: chrome
+  spec:
+    replicas: 1
+    selector:
+      io.kompose.service: chrome
+    strategy:
+      resources: {}
+    template:
+      metadata:
+        creationTimestamp: null
+        labels:
+          io.kompose.service: chrome
+      spec:
+        containers:
+        - env:
+          - name: HUB_HOST
+            value: selenium-hub.myproject.svc
+          - name: HUB_PORT
+            value: "4444"
+          - name: HOME
+            value: /chrome
+          image: ' '
+          name: chrome
+          resources:
+            limits:
+              memory: 2Gi
+            requests:
+              memory: 1Gi
+          volumeMounts:
+            - mountPath: /chrome
+              name: home-volume
+        restartPolicy: Always
+        volumes:
+          - name: home-volume
+            emptyDir: {}
+    test: false
+    triggers:
+    - type: ConfigChange
+    - imageChangeParams:
+        automatic: true
+        containerNames:
+        - chrome
+        from:
+          kind: ImageStreamTag
+          name: chrome:latest
+      type: ImageChange
+  status: {}
+- apiVersion: v1
+  kind: ImageStream
+  metadata:
+    creationTimestamp: null
+    labels:
+      io.kompose.service: chrome
+    name: chrome
+  spec:
+    tags:
+    - annotations: null
+      from:
+        kind: DockerImage
+        name: chrome
+      generation: null
+      importPolicy: {}
+      name: latest
+  status:
+    dockerImageRepository: ""
+- apiVersion: v1
+  kind: BuildConfig
+  metadata:
+    annotations:
+      kompose.cmd: kompose convert -f docker-compose.yml --provider openshift --build
+        build-config --build-repo https://github.com/tw5860/seleniumOnOS.git -o selenium-liveness.yaml
+      kompose.version: 1.9.0 ()
+    creationTimestamp: null
+    labels:
+      io.kompose.service: chrome
+    name: chrome
+  spec:
+    nodeSelector: null
+    output:
+      to:
+        kind: ImageStreamTag
+        name: chrome:latest
+    postCommit: {}
+    resources: {}
+    runPolicy: Serial
+    source:
+      contextDir: node/chrome/
+      git:
+        ref: master
+        uri: https://github.com/tw5860/seleniumOnOS.git
+      type: Git
+    strategy:
+      dockerStrategy: {}
+      type: Docker
+    triggers:
+    - type: ConfigChange
+  status:
+    lastVersion: 0
+- apiVersion: v1
+  kind: DeploymentConfig
+  metadata:
+    annotations:
+      kompose.cmd: kompose convert -f docker-compose.yml --provider openshift --build
+        build-config --build-repo https://github.com/tw5860/seleniumOnOS.git -o selenium-liveness.yaml
+      kompose.version: 1.9.0 ()
+    creationTimestamp: null
+    labels:
       io.kompose.service: selenium-hub
       app: Selenium-Liveness
     name: selenium-hub
