--- a/selenium-liveness.yaml
+++ b/selenium-liveness.yaml
@@ -9,15 +9,16 @@ items:
       kompose.version: 1.9.0 ()
     creationTimestamp: null
     labels:
-      io.kompose.service: app
-    name: app
+      io.kompose.service: seleniumTest
+      application.name: liveness-monitoring 
+    name: seleniumTest
   spec:
     ports:
     - name: "8080"
       port: 8080
       targetPort: 8080
     selector:
-      io.kompose.service: app
+      io.kompose.service: seleniumTest
   status:
     loadBalancer: {}
 - apiVersion: v1
@@ -30,6 +31,7 @@ items:
     creationTimestamp: null
     labels:
       io.kompose.service: firefox
+      application.name: liveness-monitoring 
     name: firefox
   spec:
     clusterIP: None
@@ -50,6 +52,7 @@ items:
       kompose.version: 1.9.0 ()
     creationTimestamp: null
     labels:
+      application.name: liveness-monitoring 
       io.kompose.service: selenium-hub
     name: selenium-hub
   spec:
@@ -70,24 +73,26 @@ items:
       kompose.version: 1.9.0 ()
     creationTimestamp: null
     labels:
-      io.kompose.service: app
+      io.kompose.service: seleniumTest
+      application.name: liveness-monitoring 
       app: Selenium-Liveness
-    name: app
+    name: seleniumTest
   spec:
     replicas: 1
     selector:
-      io.kompose.service: app
+      io.kompose.service: seleniumTest
     strategy:
       resources: {}
     template:
       metadata:
         creationTimestamp: null
         labels:
-          io.kompose.service: app
+          io.kompose.service: seleniumTest
+          application.name: liveness-monitoring 
       spec:
         containers:
         - image: ' '
-          name: app
+          name: seleniumTest
           ports:
           - containerPort: 8080
           resources: {}
@@ -111,10 +116,10 @@ items:
     - imageChangeParams:
         automatic: true
         containerNames:
-        - app
+        - seleniumTest
         from:
           kind: ImageStreamTag
-          name: app:latest
+          name: seleniumTest:latest
       type: ImageChange
   status: {}
 - apiVersion: v1
@@ -122,14 +127,15 @@ items:
   metadata:
     creationTimestamp: null
     labels:
-      io.kompose.service: app
-    name: app
+      io.kompose.service: seleniumTest
+      application.name: liveness-monitoring 
+    name: seleniumTest
   spec:
     tags:
     - annotations: null
       from:
         kind: DockerImage
-        name: app
+        name: seleniumTest
       generation: null
       importPolicy: {}
       name: latest
@@ -144,14 +150,15 @@ items:
       kompose.version: 1.9.0 ()
     creationTimestamp: null
     labels:
-      io.kompose.service: app
-    name: app
+      io.kompose.service: seleniumTest
+      application.name: liveness-monitoring 
+    name: seleniumTest
   spec:
     nodeSelector: null
     output:
       to:
         kind: ImageStreamTag
-        name: app:latest
+        name: seleniumTest:latest
     postCommit: {}
     resources: {}
     runPolicy: Serial
@@ -177,6 +184,7 @@ items:
     creationTimestamp: null
     labels:
       io.kompose.service: firefox
+      application.name: liveness-monitoring 
       app: Selenium-Liveness
     name: firefox
   spec:
@@ -190,6 +198,7 @@ items:
         creationTimestamp: null
         labels:
           io.kompose.service: firefox
+          application.name: liveness-monitoring 
       spec:
         containers:
         - env:
@@ -231,6 +240,7 @@ items:
     creationTimestamp: null
     labels:
       io.kompose.service: firefox
+      application.name: liveness-monitoring 
     name: firefox
   spec:
     tags:
@@ -253,6 +263,7 @@ items:
     creationTimestamp: null
     labels:
       io.kompose.service: firefox
+      application.name: liveness-monitoring 
     name: firefox
   spec:
     nodeSelector: null
@@ -286,6 +297,7 @@ items:
     creationTimestamp: null
     labels:
       io.kompose.service: chrome
+      application.name: liveness-monitoring 
       app: Selenium-Liveness
     name: chrome
   spec:
@@ -299,6 +311,7 @@ items:
         creationTimestamp: null
         labels:
           io.kompose.service: chrome
+          application.name: liveness-monitoring 
       spec:
         containers:
         - env:
@@ -339,6 +352,7 @@ items:
   metadata:
     creationTimestamp: null
     labels:
+      application.name: liveness-monitoring 
       io.kompose.service: chrome
     name: chrome
   spec:
@@ -362,6 +376,7 @@ items:
     creationTimestamp: null
     labels:
       io.kompose.service: chrome
+      application.name: liveness-monitoring 
     name: chrome
   spec:
     nodeSelector: null
@@ -395,6 +410,7 @@ items:
     creationTimestamp: null
     labels:
       io.kompose.service: selenium-hub
+      application.name: liveness-monitoring 
       app: Selenium-Liveness
     name: selenium-hub
   spec:
@@ -408,6 +424,7 @@ items:
         creationTimestamp: null
         labels:
           io.kompose.service: selenium-hub
+          application.name: liveness-monitoring 
       spec:
         containers:
         - image: ' '
@@ -434,6 +451,7 @@ items:
     creationTimestamp: null
     labels:
       io.kompose.service: selenium-hub
+      application.name: liveness-monitoring 
     name: selenium-hub
   spec:
     tags:
@@ -456,6 +474,7 @@ items:
     creationTimestamp: null
     labels:
       io.kompose.service: selenium-hub
+      application.name: liveness-monitoring 
     name: selenium-hub
   spec:
     nodeSelector: null
@@ -488,7 +507,7 @@ items:
       targetPort: '8080'
     to:
       kind: Service
-      name: app
+      name: seleniumTest
       weight: 100
 
 kind: List
