--- a/selenium-liveness.yaml
+++ b/selenium-liveness.yaml
@@ -9,16 +9,16 @@ items:
       kompose.version: 1.9.0 ()
     creationTimestamp: null
     labels:
-      io.kompose.service: seleniumTest
+      io.kompose.service: selenium-test
       application.name: liveness-monitoring 
-    name: seleniumTest
+    name: selenium-test
   spec:
     ports:
     - name: "8080"
       port: 8080
       targetPort: 8080
     selector:
-      io.kompose.service: seleniumTest
+      io.kompose.service: selenium-test
   status:
     loadBalancer: {}
 - apiVersion: v1
@@ -73,26 +73,26 @@ items:
       kompose.version: 1.9.0 ()
     creationTimestamp: null
     labels:
-      io.kompose.service: seleniumTest
+      io.kompose.service: selenium-test
       application.name: liveness-monitoring 
       app: Selenium-Liveness
-    name: seleniumTest
+    name: selenium-test
   spec:
     replicas: 1
     selector:
-      io.kompose.service: seleniumTest
+      io.kompose.service: selenium-test
     strategy:
       resources: {}
     template:
       metadata:
         creationTimestamp: null
         labels:
-          io.kompose.service: seleniumTest
+          io.kompose.service: selenium-test
           application.name: liveness-monitoring 
       spec:
         containers:
         - image: ' '
-          name: seleniumTest
+          name: selenium-test
           ports:
           - containerPort: 8080
           resources: {}
@@ -116,10 +116,10 @@ items:
     - imageChangeParams:
         automatic: true
         containerNames:
-        - seleniumTest
+        - selenium-test
         from:
           kind: ImageStreamTag
-          name: seleniumTest:latest
+          name: selenium-test:latest
       type: ImageChange
   status: {}
 - apiVersion: v1
@@ -127,15 +127,15 @@ items:
   metadata:
     creationTimestamp: null
     labels:
-      io.kompose.service: seleniumTest
+      io.kompose.service: selenium-test
       application.name: liveness-monitoring 
-    name: seleniumTest
+    name: selenium-test
   spec:
     tags:
     - annotations: null
       from:
         kind: DockerImage
-        name: seleniumTest
+        name: selenium-test
       generation: null
       importPolicy: {}
       name: latest
@@ -150,15 +150,15 @@ items:
       kompose.version: 1.9.0 ()
     creationTimestamp: null
     labels:
-      io.kompose.service: seleniumTest
+      io.kompose.service: selenium-test
       application.name: liveness-monitoring 
-    name: seleniumTest
+    name: selenium-test
   spec:
     nodeSelector: null
     output:
       to:
         kind: ImageStreamTag
-        name: seleniumTest:latest
+        name: selenium-test:latest
     postCommit: {}
     resources: {}
     runPolicy: Serial
@@ -507,7 +507,7 @@ items:
       targetPort: '8080'
     to:
       kind: Service
-      name: seleniumTest
+      name: selenium-test
       weight: 100
 
 kind: List
