--- a/selenium-liveness.yaml
+++ b/selenium-liveness.yaml
@@ -177,7 +177,7 @@ items:
       dockerStrategy:
         from:
           kind: "DockerImage"
-          name: "rhel7.4:latest"
+          name: "grape-spring-boot-base-image:latest"
       type: Docker
     triggers:
     - type: ConfigChange
