add timeouts to nodes

--- a/node/chrome/Dockerfile
+++ b/node/chrome/Dockerfile
@@ -50,4 +50,4 @@ COPY wrap_chrome_binary /opt/bin/wrap_chrome_binary
 RUN /opt/bin/wrap_chrome_binary
 
 RUN sh /opt/bin/generate_config > /opt/selenium/config.json
-CMD java -Xmx512m -jar /opt/selenium/selenium-server-standalone.jar -role node -hub http://$HUB_HOST:$HUB_PORT/grid/register -nodeConfig /opt/selenium/config.json
+CMD java -Xmx512m -jar /opt/selenium/selenium-server-standalone.jar -role node -hub http://$HUB_HOST:$HUB_PORT/grid/register -nodeConfig /opt/selenium/config.json -timeout 30 -browserTimeout 60
