--- a/node/firefox/Dockerfile
+++ b/node/firefox/Dockerfile
@@ -60,4 +60,4 @@ RUN GK_VERSION=$(if [ ${GECKODRIVER_VERSION:-latest} = "latest" ]; then echo $(w
 COPY generate_config /opt/bin/generate_config
 
 RUN sh /opt/bin/generate_config > /opt/selenium/config.json
-CMD java -Xmx512m -jar /opt/selenium/selenium-server-standalone.jar -role node -hub http://$HUB_HOST:$HUB_PORT/grid/register -nodeConfig /opt/selenium/config.json
+CMD java -Xmx512m -jar /opt/selenium/selenium-server-standalone.jar -role node -hub http://$HUB_HOST:$HUB_PORT/grid/register -nodeConfig /opt/selenium/config.json -timeout 30 -browserTimeout 60
